@@ -1,4 +1,5 @@
 import time
+from datetime import datetime
 import pickle
 from api import steps_today_update
 
@@ -13,13 +14,35 @@ steps_today = steps_today_update()
 ### Character characteristics ###
 ### Характеристики персонажа ####
 
+def load_characteristic():
+    # Функция загрузки характеристик из файла
+    global char_characteristic
+    with open('characteristic.txt', 'rb') as f:
+        char_characteristic = pickle.load(f)
+        print(f'Чтение сохранения: {char_characteristic}')
+        return char_characteristic
+
+
+def date_check_steps_today_used():
+    # Функция проверки последнего входа в игру.
+    # Если дата последнего входа в игру не сегодня - обнуление счётчика steps_today_used
+    date_today_check = open('save.txt', 'r')
+    last_enter_date = date_today_check.read()
+    now_date = datetime.now().date()
+    if str(now_date) != last_enter_date:
+        print('Данные обновлены: steps_today_used.')
+        return 0
+    elif str(now_date) == last_enter_date:
+        return load_characteristic()['steps_today_used']
+
+
 char_characteristic = {
     'date_last_enter': None,    # Добавить дату последнего входа в игру
     'steps_today' : steps_today,
     'steps_can_use': 60,
-    'steps_today_used': 0,
-    'loc' : 'home',
-    'energy' : 50,
+    'steps_today_used': date_check_steps_today_used(),  # Шаги потреченные за сегодня
+    'loc' : load_characteristic()['loc'],
+    'energy' : load_characteristic()['energy'],
     'energy_max' : 50,
     'stamina' : 0,
     'mechanics' : 0,
@@ -29,24 +52,17 @@ char_characteristic = {
 
 def save_characteristic():
     # Функция записи характеристик в файл
-    print(char_characteristic)
+    print(f'Сохраняем данные: {char_characteristic}')
     with open('characteristic.txt', 'wb') as f:
         pickle.dump(char_characteristic, f)
     print('\nSave Successfully.')
 
 
-def load_characteristic():
-    # Функция загрузки характеристик из файла
-#    global data
-    with open('characteristic.txt', 'rb') as f:
-        char_characteristic = pickle.load(f)
-#        data = pickle.load(f)
-#        char_characteristic = data
-        return char_characteristic
 
 #save_characteristic()
-load_characteristic()
+#load_characteristic()
 
+#char_characteristic['energy'] = load_characteristic()['energy']
 
 
 
