@@ -1,5 +1,6 @@
 19.02.2022
 Version: 0.0.1f
+- Add save/load game function (characteristic.py)
 - Small changes
 - Add project on GitHub (https://github.com/A1ekseyN/2Walks)
 
